testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_exponent_part/case4.expect.out
error: expected exponent part in hexadecimal float number '0x12.34'
  ==> case4.cj:14:20:
   | 
14 |     "cangjie ${0x12.34}"
   |                ~~~~~~~^ expected exponent part
   |                |
   |                because it is hexadecimal float number
   | 

1 error generated, 1 error printed.
